helmfile/phase1/manifests/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-public-alb
  namespace: istio-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-south-1:923373850235:certificate/15827d49-5a7b-444c-8dfa-ed8d880298a6"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: platform
spec:
  ingressClassName: alb
  rules:
    - host: auth.rj-lab.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-gateway
                port:
                  number: 80
    - host: gateway.rj-lab.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-gateway
                port:
                  number: 80
    - host: keycloak.rj-lab.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-gateway
                port:
                  number: 80
    - host: grafana.rj-lab.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-gateway
                port:
                  number: 80
